vlib/v/parser/tests/invalid_interface_decl_script_err.vv
mynum := 10

interface IUniversal {
}
